# flux512

./: CMakeLists.txt  README.md
src/: .cproject  .project  decrypt.cpp  encrypt.cpp  flux.h  main.cpp  pbox.cpp  sbox.cpp  utils.cpp
src/sha512/: CMakeLists.txt  sha512.cpp  sha512.h
